<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".ConsoleActivity" >

    <TextView
        android:id="@+id/demoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <ScrollView
        android:id="@+id/demoScroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/demoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace" />
        
    </ScrollView>
    
    <EditText
        android:id="@+id/inputText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/inputButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextHint" />
    <Button 
        android:id="@+id/inputButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputButton"
        android:onClick="sendCommand" />
    
</RelativeLayout>